<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <net.soulwolf.widget.ratiolayout.widget.RatioRelativeLayout
        android:id="@+id/mainLay"
        app:datumRatio="datumWidth"
        app:widthRatio="16"
        app:heightRatio="9"
        android:background="#aaa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/mainImg"
            android:src="@drawable/ic_placeholder"
            android:scaleType="fitXY"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <android.support.percent.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </android.support.percent.PercentRelativeLayout>
    </net.soulwolf.widget.ratiolayout.widget.RatioRelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Space
                android:layout_width="match_parent"
                android:layout_height="12dp" />
            <Button
                android:id="@+id/btnSelect"
                android:text="@string/select_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btnAdd"
                android:text="@string/add_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:id="@+id/edtLay"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </LinearLayout>
            <Button
                android:id="@+id/btnSave"
                android:text="@string/save_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
