<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <net.soulwolf.widget.ratiolayout.widget.RatioRelativeLayout
                android:id="@+id/mainPotg"
                app:datumRatio="datumWidth"
                app:widthRatio="16"
                app:heightRatio="9"
                android:background="#aaa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/ic_placeholder"
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <android.support.percent.PercentRelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        app:layout_marginTopPercent="31.5%"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <android.support.percent.PercentRelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <kr.edcan.potg.view.FontTextViewBright
                                android:id="@+id/tvTitle"
                                app:layout_marginStartPercent="16%"
                                android:singleLine="true"
                                android:textSize="@dimen/potg_title"
                                android:textColor="@android:color/white"
                                android:text="@string/def_potg"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />
                        </android.support.percent.PercentRelativeLayout>
                        <android.support.percent.PercentRelativeLayout
                            android:layout_marginTop="@dimen/potg_name_margin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <kr.edcan.potg.view.FontTextViewBold
                                android:id="@+id/tvName"
                                app:layout_marginStartPercent="21%"
                                android:singleLine="true"
                                android:textSize="@dimen/potg_name"
                                android:textColor="#ffcc00"
                                android:text="@string/def_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />
                            <kr.edcan.potg.view.FontTextViewBold
                                android:id="@+id/tvNameBG"
                                app:layout_marginStartPercent="21%"
                                android:singleLine="true"
                                android:textSize="@dimen/potg_name"
                                android:textColor="#ffcc00"
                                android:text="@string/def_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />
                        </android.support.percent.PercentRelativeLayout>
                        <android.support.percent.PercentRelativeLayout
                            android:layout_marginTop="-4dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <kr.edcan.potg.view.FontTextViewBright
                                android:id="@+id/tvSub"
                                app:layout_marginStartPercent="20%"
                                android:singleLine="true"
                                android:textSize="@dimen/potg_title"
                                android:textColor="@android:color/white"
                                android:text="@string/def_role"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />
                        </android.support.percent.PercentRelativeLayout>
                    </LinearLayout>
                </android.support.percent.PercentRelativeLayout>
            </net.soulwolf.widget.ratiolayout.widget.RatioRelativeLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />
            <net.soulwolf.widget.ratiolayout.widget.RatioRelativeLayout
                android:id="@+id/mainLoad"
                app:datumRatio="datumWidth"
                app:widthRatio="16"
                app:heightRatio="9"
                android:background="#aaa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/mainImg"
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <android.support.percent.PercentRelativeLayout
                    android:gravity="bottom"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <android.support.percent.PercentRelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <android.support.percent.PercentRelativeLayout
                            android:id="@+id/tvActionLay"
                            app:layout_marginBottomPercent="7%"
                            android:layout_marginTop="@dimen/potg_name_margin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <kr.edcan.potg.view.FontTextViewLoad
                                android:id="@+id/tvAction"
                                android:layout_alignParentBottom="true"
                                android:gravity="end"
                                app:layout_marginEndPercent="4%"
                                android:singleLine="true"
                                android:textSize="@dimen/load_action"
                                android:textColor="#8BCEE5"
                                android:text="@string/def_load"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />
                        </android.support.percent.PercentRelativeLayout>
                        <android.support.percent.PercentRelativeLayout
                            android:layout_width="match_parent"
                            app:layout_marginBottomPercent="3.5%"
                            android:layout_height="wrap_content">
                            <kr.edcan.potg.view.FontTextViewBright
                                android:id="@+id/tvLocate"
                                android:layout_alignParentBottom="true"
                                app:layout_marginLeftPercent="65.3%"
                                android:singleLine="true"
                                android:textSize="@dimen/load_locate"
                                android:textColor="@android:color/white"
                                android:text="@string/def_location"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />
                        </android.support.percent.PercentRelativeLayout>
                        <android.support.percent.PercentRelativeLayout
                            android:id="@+id/layTip"
                            android:visibility="gone"
                            android:background="#99000000"
                            app:layout_marginTopPercent="71%"
                            app:layout_marginEndPercent="64.9%"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <android.support.percent.PercentRelativeLayout
                                app:layout_marginLeftPercent="26.3%"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                                <kr.edcan.potg.view.FontTextView
                                    android:id="@+id/loadTip"
                                    app:layout_marginTopPercent="2%"
                                    android:textSize="@dimen/load_tip"
                                    android:textColor="@android:color/white"
                                    android:text="@string/def_tip"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content" />
                                <android.support.percent.PercentRelativeLayout
                                    android:layout_below="@+id/loadTip"
                                    app:layout_marginTopPercent="1%"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content">
                                    <RelativeLayout
                                        android:id="@+id/loadTipDiv"
                                        android:layout_centerVertical="true"
                                        android:background="#88ffffff"
                                        android:layout_width="3px"
                                        android:layout_height="4.3sp"/>
                                    <kr.edcan.potg.view.FontTextView
                                        android:id="@+id/tvTip"
                                        android:layout_centerVertical="true"
                                        android:layout_toRightOf="@+id/loadTipDiv"
                                        app:layout_marginStartPercent="2%"
                                        app:layout_marginBottomPercent="3%"
                                        app:layout_marginEndPercent="1%"
                                        android:textColor="@color/colorPrimary"
                                        android:textSize="@dimen/load_tip_cont"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content" />
                                </android.support.percent.PercentRelativeLayout>
                            </android.support.percent.PercentRelativeLayout>
                        </android.support.percent.PercentRelativeLayout>
                        <ImageView
                            android:layout_alignParentBottom="true"
                            android:src="@drawable/ow"
                            app:layout_marginBottomPercent="4.5%"
                            app:layout_marginStartPercent="3.3%"
                            app:layout_widthPercent="6.8%"
                            app:layout_heightPercent="12%"
                            android:layout_width="0dp"
                            android:layout_height="0dp" />
                    </android.support.percent.PercentRelativeLayout>
                </android.support.percent.PercentRelativeLayout>
            </net.soulwolf.widget.ratiolayout.widget.RatioRelativeLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />
            <net.soulwolf.widget.ratiolayout.widget.RatioRelativeLayout
                android:id="@+id/mainHighmoon"
                app:datumRatio="datumWidth"
                app:widthRatio="16"
                app:heightRatio="9"
                android:background="#aaa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/ic_placeholder"
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <RelativeLayout
                    android:background="#7D5D2A00"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <ImageView
                    android:layout_centerInParent="true"
                    android:src="@drawable/dead"
                    android:layout_width="62dp"
                    android:layout_height="62dp" />
                <android.support.percent.PercentRelativeLayout
                    android:layout_marginLeft="-1dp"
                    android:layout_alignParentBottom="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <!--  app:layout_marginStartPercent="16%" -->
                    <ImageView
                        android:adjustViewBounds="true"
                        android:scaleType="centerInside"
                        android:src="@drawable/highnoon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </android.support.percent.PercentRelativeLayout>
            </net.soulwolf.widget.ratiolayout.widget.RatioRelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
